# HR-ChatBOT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: app.py  config.py  graph.py  models.py  prompts.py  rag_engine.py  tools.py
backend/data/: sample_data.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatMessage.jsx  LoadingBubble.jsx  WelcomeSection.jsx
scripts/: batch_test_csv.py  update_csv_metadata.py
