[project]
name = "hr_agentic_rag"
version = "0.1.0"
description = "HR agentic RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-huggingface>=0.0.1",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint>=1.0.0",
    "langgraph-prebuilt>=0.1.0",
    "pandas>=2.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "langdetect>=1.0.9",
    "opencc>=1.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
